# PhySphere-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  Log.txt  PhySphere - main.vcxproj  PhySphere - main.vcxproj.filters  PhySphere Framework.sln  README.md
App/: CMakeLists.txt  source.cpp
Engine/BackEnd/: ExceptionHandler.cpp  ExceptionHandler.h  MemoryManager.h  ThreadManager.h  ThreadPool.h
Engine/Camera/: FirstPerson.h
Engine/Collisions/: AABB.cpp  AABB.h
Engine/DataStructures/: ContainedOctree.h  ContainedQuadTree.h  Octree.h  QuadTree.h
Engine/DataStructures/Dependencies/: Dependencies.h
Engine/Debug/: Log.h
Engine/Dependencies/: Dependencies.h
Engine/Meshing/: Mesher.cpp
Engine/Rendering/: FrustumCulling.h  Shader.cpp  Shader.h
Engine/Shader/BasicShaders/: Instance.shader
Engine/Spatial-Tree-Structures/: ContainedOctree.h  Octree.h  QuadTree.h  TreeData.h
Engine/Tools/: FrameworkExceptions.cpp  FrameworkExceptions.h  ThreadPool.cpp  ThreadPool.h
Engine/VoxelWorldCreation/Fundamental Elements/: Block.h  Blocks.h  Chunk.cpp  Chunk.h  ChunkTree.cpp  ChunkTree.h
Engine/VoxelWorldCreation/World Generator/: BiomeDesigner.cpp  BiomeDesigner.h  FloralGenerator.cpp  FloralGenerator.h  ForestGenerator.cpp  LandmassDesigner.h  PlainsGenerator.h  RiverGenerator.h
Engine/World/WorldStructures/: Blocks.h  Chunk.cpp  ChunkMap.cpp  ChunkMap.h  ChunkTree.h
Engine/WorldCreation/Fundamental Elements/: AABB.cpp  AABB.h  Block.h  Blocks.h  ChunkTree.h  ContainedOctree.h  Octree.h
Engine/WorldCreation/Mesh Generator/: Mesher.h
Engine/WorldCreation/World Generator/: ChunkGenerator.h  DesertGenerator.cpp  DesertGenerator.h  ForestGenerator.h  LandmassDesigner.cpp  PlainsGenerator.cpp
Game/: source.cpp
Libraries/: CMakeLists.txt
Libraries/GLAD/include/glad/: glad.h
Libraries/GLAD/src/: glad.c
Libraries/GLM/detail/: glm.cpp
Libraries/IMGUI/: CMakeLists.txt  imgui_impl_glfw_gl3.cpp  main.cpp
Libraries/THREADPOOL/: BS_thread_pool.hpp
Shaders/: Basic.shader
